# neural-astar-repro

./: README.md  pyproject.toml  setup.py
data/mpd/: mazes_032_moore_c8.npz
runs/mazes_032_moore_c8/: best.pt  last.pt
scripts/: create_gif.py  train.py
src/neural_astar/: __init__.py
src/neural_astar/planner/: astar.py  differentiable_astar.py  encoder.py  pq_astar.py
src/neural_astar/utils/: data.py  training.py
src/neural_astar_repro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: astar_test.py
